Update to correct keybinds

--- a/dwm.1
+++ b/dwm.1
@@ -92,29 +92,32 @@ Sets monocle layout.
 .B Mod1\-space
 Toggles between current and previous layout.
 .TP
-.B Mod1\-j
+.B Mod1\-y
 Focus next window.
 .TP
-.B Mod1\-k
+.B Mod1\-g
 Focus previous window.
 .TP
-.B Mod1\-i
+.B Mod1\-o
 Increase number of windows in master area.
 .TP
-.B Mod1\-d
+.B Mod1\-i
 Decrease number of windows in master area.
 .TP
-.B Mod1\-l
+.B Mod1\-e
 Increase master area size.
 .TP
-.B Mod1\-h
+.B Mod1\-n
 Decrease master area size.
 .TP
 .B Mod1\-Return
 Zooms/cycles focused window to/from master area (tiled layouts only).
 .TP
-.B Mod1\-Shift\-c
+.B Mod1\-Shift\-q
 Close focused window.
+.TP
+.B Mod1\-Shift\-m
+Toggle fullscreen for focused window.
 .TP
 .B Mod1\-Shift\-space
 Toggle focused window between tiled and floating state.
@@ -150,7 +153,7 @@ Increase the gaps around windows.
 Reset the gaps around windows to
 .BR 0 .
 .TP
-.B Mod1\-Shift\-q
+.B Mod1\-Shift\-BackSpace
 Quit dwm.
 .SS Mouse commands
 .TP
