--- a/README
+++ b/README
@@ -1,11 +1,19 @@
 Arch installation instructions
 ==============================
-sudo pacman -Sy ttf-nerd-fonts-symbols-mono
-cd sources
-git clone https://github.com/nozzato/dwm.git
-cd dwm
-cp config.def.h config.h
-sudo make clean install
+Clone the repository
+$ git clone https://github.com/nozzato/dwm.git
+
+Modify config.h
+$ cp config.def.h config.h      (choose a set of icons for the tags and change
+$ vim config.h                   the default tag apps to your preference)
+
+Install these packages
+libxinerama                     (dwm dependency)
+ttf-nerd-fonts-symbols-mono     (for tag icons)
+adobe-source-han-sans-jp-fonts  (for tag kanji)
+
+Install dwm
+# make clean install
 
 
 Patches
