--- a/README
+++ b/README
@@ -24,9 +24,10 @@ fullgaps
 statusallmons
 
 
-Notice
-------
-Some keyboard shortcuts have been adapted to the uk workman programmer layout.
+Keybinds
+--------
+Some keybinds have been adapted to the uk workman layout.
+I have also included alternate keybinds for programmer keys.
 
 
 dwm - dynamic window manager
