--- a/dwm.1
+++ b/dwm.1
@@ -121,6 +121,9 @@ Decrease master area size.
 .B Super\-Return
 Zooms/cycles focused window to/from master area (tiled layouts only).
 .TP
+.B Super\-u
+Unswallow window from focused window.
+.TP
 .B Super\-Shift\-q
 Close focused window.
 .TP
@@ -153,7 +156,6 @@ Add/remove all windows with nth tag to/from the view.
 .TP
 .B Super\-Shift\-BackSpace
 Quit dwm.
-.SS Mouse commands
 .TP
 .B Super\-Control\-Shift\-BackSpace
 Restart dwm.
@@ -167,6 +169,9 @@ Toggles focused window between floating and tiled state.
 .TP
 .B Super\-Button3
 Resize focused window while dragging. Tiled windows will be toggled to the floating state.
+.TP
+.B Super\-Shift\-Button1
+Drag and drop a window onto another window to swallow it.
 .SH CUSTOMIZATION
 dwm is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
