Add support for QWERTY layout

--- a/README
+++ b/README
@@ -39,8 +39,8 @@ sticky
 
 Keybinds
 --------
-Some keybinds have been adapted to the uk workman layout.
-I have also included alternate keybinds for programmer keys.
+Some keybinds have been adapted for a UK keyboard and my preferences.
+I have also included alternate keybinds for the workman keyboard layout.
 
 
 Todo
