--- a/dwm.1
+++ b/dwm.1
@@ -60,12 +60,7 @@ click on a tag label adds/removes that tag to/from the focused window.
 Start
 .BR st(1).
 .TP
-.B Super\-p
-Spawn
-.BR dmenu(1)
-for launching other programs.
-.TP
-.B Super\-d
+.B Super\-p|d
 Spawn
 .BR dmenu(1)
 for launching other programs.
@@ -91,31 +86,28 @@ Sets tiled layout.
 .B Super\-f
 Sets floating layout.
 .TP
-.B Super\-m
+.B Super\-g
 Sets monocle layout.
-.TP
-.B Super\-Shift\-m
-Toggles full screen.
 .TP
 .B Super\-space
 Toggles between current and previous layout.
 .TP
-.B Super\-e
+.B Super\-k
 Focus next window.
 .TP
-.B Super\-n
+.B Super\-j
 Focus previous window.
 .TP
-.B Super\-k
+.B Super\-h
 Increase number of windows in master area.
 .TP
 .B Super\-l
 Decrease number of windows in master area.
 .TP
-.B Super\-o
+.B Super\-m
 Increase master area size.
 .TP
-.B Super\-y
+.B Super\-n
 Decrease master area size.
 .TP
 .B Super\-Return
@@ -127,7 +119,7 @@ Unswallow window from focused window.
 .B Super\-Shift\-q
 Close focused window.
 .TP
-.B Super\-Shift\-m
+.B Super\-Shift\-g
 Toggle fullscreen for focused window.
 .TP
 .B Super\-Shift\-space
