--- a/dwm.1
+++ b/dwm.1
@@ -65,6 +65,16 @@ Spawn
 .BR dmenu(1)
 for launching other programs.
 .TP
+.B Mod4\-`
+Start
+.BR st(1)
+as a scratchpad.
+.TP
+.B Mod4\-x
+Start
+.BR keepassxc(1)
+as a scratchpad.
+.TP
 .B Mod4\-,
 Focus previous screen, if any.
 .TP
