--- a/dwm.1
+++ b/dwm.1
@@ -150,8 +150,12 @@ View all windows with any tag.
 .B Mod4\-Control\-[1..n]
 Add/remove all windows with nth tag to/from the view.
 .TP
-.B Mod4\-Shift\-c
+.B Mod4\-Shift\-c*2
 Quit dwm.
+.TP
+.B Mod4\-Shift\-r*2
+Restart dwm.
+ .SS Mouse commands
 .SS Mouse commands
 .TP
 .B Mod4\-Button1
@@ -165,6 +169,13 @@ Resize focused window while dragging. Tiled windows will be toggled to the float
 .SH CUSTOMIZATION
 dwm is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
+.SH SIGNALS
+.TP
+.B SIGHUP - 1
+Restart the dwm process.
+.TP
+.B SIGTERM - 15
+Cleanly terminate the dwm process.
 .SH SEE ALSO
 .BR dmenu (1),
 .BR st (1)
