--- a/dwm.1
+++ b/dwm.1
@@ -130,6 +130,9 @@ Zooms/cycles focused window to/from master area (tiled layouts only).
 .B Mod4\-Shift\-q
 Close focused window.
 .TP
+.B Mod4\-Shift\-g
+Toggle fullscreen for focused window.
+.TP
 .B Mod4\-Shift\-space
 Toggle focused window between tiled and floating state.
 .TP
