--- a/dwm.1
+++ b/dwm.1
@@ -136,6 +136,9 @@ Toggle fullscreen for focused window.
 .B Mod4\-Shift\-space
 Toggle focused window between tiled and floating state.
 .TP
+.B Mod4\-u
+Unswallow window from focused window.
+.TP
 .B Mod4\-Tab
 Toggles to the previously selected tags.
 .TP
@@ -173,6 +176,8 @@ Toggles focused window between floating and tiled state.
 .TP
 .B Mod4\-Button3
 Resize focused window while dragging. Tiled windows will be toggled to the floating state.
+.B Mod4\-Shift\-Button1
+Drag and drop a window onto another window to swallow it.
 .SH CUSTOMIZATION
 dwm is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
