Add support for Workman keyboard layout and programmer keys

--- a/README
+++ b/README
@@ -32,6 +32,7 @@ titlecolor
 Keybinds
 --------
 Some keybinds have been adapted for a UK keyboard and my preferences.
+Alternate keybinds for the workman keyboard layout and programmer keys included.
 
 
 dwm - dynamic window manager
